<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="co.bangumi.cassiopeia.viewmodel.HomeViewModel" />

        <variable
            name="presenter"
            type="co.bangumi.cassiopeia.ui.HomeFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_recommended"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/text_recommended"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="0dp"
                            android:text="@string/recommended"
                            android:textColor="@color/textColorLowLight"
                            android:textSize="14sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_recommended"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_watching"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="0dp"
                            android:text="@string/watching"
                            android:textColor="@color/textColorLowLight"
                            android:textSize="14sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_watching"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:layout_marginBottom="10dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_vertical|end"
                            android:orientation="vertical"
                            android:paddingEnd="14dp"
                            android:text="@string/my_collection"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layout_releasing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/txt_release"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="0dp"
                            android:text="@string/releasing"
                            android:textColor="@color/textColorLowLight"
                            android:textSize="14sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_releasing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:overScrollMode="never" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:layout_marginBottom="10dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_vertical|end"
                            android:orientation="vertical"
                            android:paddingEnd="14dp"
                            android:text="@string/all_bangumi"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>