<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="co.bangumi.cassiopeia.viewmodel.DetailViewModel" />

        <variable
            name="presenter"
            type="co.bangumi.framework.base.BasePresenter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detailBackground"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/detailContentBackground"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
                app:titleEnabled="true"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:foreground="@color/fullscreenPrimaryDark"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:background="@drawable/top_background"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="pin" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/detailBackground"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/fragment_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="56dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#101010"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:textColor="@color/textColorTitle2"
                        android:textSize="21sp"
                        app:layout_collapseMode="parallax"
                        tools:text="Subtitle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/type_sub"
                            android:layout_width="wrap_content"
                            android:layout_height="18dp"
                            android:layout_marginStart="33dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/radius_rectangle_blue"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:text="@string/bangumi_type_cn"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="12sp"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/type_raw"
                            android:layout_width="wrap_content"
                            android:layout_height="18dp"
                            android:layout_marginStart="33dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/radius_rectangle_red"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:text="@string/bangumi_type_raw"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="12sp"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textColor="@color/textColorSecondary"
                            android:textSize="16sp"
                            app:layout_collapseMode="parallax"
                            tools:text="2018-01-02, 12 episodes, Mon" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/summary_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="33dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="22dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:maxLines="1"
                            android:textColor="@color/textColorTitle2" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/summary2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="0dp"
                                android:layout_marginBottom="0dp"
                                android:ellipsize="none"
                                android:fadingEdgeLength="30dp"
                                android:requiresFadingEdge="horizontal"
                                android:singleLine="true"
                                android:textColor="@color/textColorTitle2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/btn_more"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/btn_more"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="0dp"
                                android:fontFamily="sans-serif-medium"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:text="@string/more"
                                android:textColor="@color/cassiopeiaRed"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="16dp">

                        <LinearLayout
                            android:id="@+id/collectionStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/button_red"
                            android:gravity="center"
                            android:paddingStart="8dp"
                            android:paddingEnd="4dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_playlist_add_check_black_24dp"
                                android:tint="@color/textColorPrimary"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/collectionStatusText"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="@dimen/dp_8"
                                android:text="@string/collect"
                                android:textColor="@color/textColorPrimary" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_bgm_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:background="@drawable/button_red"
                            android:text="@string/bgm_tv" />

                        <ImageView
                            android:id="@+id/img_share"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_marginStart="@dimen/dp_8"
                            android:background="@drawable/button_red"
                            android:gravity="center"
                            android:padding="@dimen/dp_8"
                            android:src="@drawable/ic_share_24dp"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="24dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/episodes"
                    android:textColor="@color/textColorLowLight"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/episode_list"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:focusable="true" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
